ica 2 with name

--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
   <title>Random Quote Generator</title>
 </head>
 <body>
+  <div id="top-left-text">
+    <p>By Jui, the Free Elf!</p>
+</div>
   <div class="container">
     <div class="quote" id="quote-text"></div>
     <div class="author" id="quote-author"></div>
     <button class="button" id="new-quote">New Quote</button>
   </div>
+  
   <script src="script.js"></script>
 </body>
 </html>
